feat: handle invalid OpenWeather response (#17)